Do lots of API cleanup